* form fields for liveblogupdate + permission-check
* show/hide liveblogupdates on publish_from value
* changes for bypassing diazo in case of liveblog

1.2.1
=====
* performance repair newsviewlet

1.2.0
=====
* added raw_id_fields to admin for performance

1.1.9
=====
* issue 1602 homepage en nieuwsbericht als verborgen

1.1.8
=====
* multiple newsitems may be sticky

1.1.6
=====
* date/time formats
* translations
* homepage image editing fixed

1.1.5
=====
* changes in presentation 

1.1.4
=====
* bugfix in newsviewlet for highlights pointing to removed news

1.1.3
=====
* added support for Likes

1.1.2
=====
* added userkeywords

1.1.2
=====
* Fixed override option for news form for group
* Fixed url for group add and some other typos...
* Fixed call to super of news on homepage
* Fix for proper display of embedded video - deleted, the user adds ?wmode=transparent in the youtube url himself.

1.1.1
=====
* small modification to highlights: no removal of highlight after owner-edit

1.1.0
=====
* made news use the new djinn_contenttypes.Highlight model
* Move to Django 1.6.x

1.0.6
=====
* translation fixes

1.0.5
=====
* Fix for related documents url

1.0.4
=====
* dependency on djinn_forms 1.2.2

1.0.3
=====
* Moved to djinn_forms richtext widget
* PEP8 fixes
* news now creates a tmp object on add
* Added signal handlers
* template fixes

1.0.2
=====
* Fixes for news to redaction group

1.0.1
=====
 * Admin settings
 * Added post save hook

1.0.0
=====
Initial version