@@ -44,7 +44,8 @@
 {#    {{ form.is_sticky|bootstrap }}#}
   {{ form.shares|bootstrap }}
 
-  {{ form.related|bootstrap }}
+{#  Toch maar uit. Feedback van 7 mei #}
+{#  {{ form.related|bootstrap }}#}
 
     {% endifpermission %}
 
