@@ -35,10 +35,11 @@
     <div><br></div>
   </section>
 
-  <section class="control-group">
-  {{ form.related|bootstrap }}
-    <div><br></div>
-  </section>
+{#  Toch maar uit. Feedback van 7 mei #}
+{#  <section class="control-group">#}
+{#  {{ form.related|bootstrap }}#}
+{#    <div><br></div>#}
+{#  </section>#}
 
   
 </fieldset>
